examples/test/testpolicy5151.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5151
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key44: value49
      key12: value24
      key8: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value30
          key35: value6
          key36: value24
      podSelector:
        matchLabels:
          key17: value20
          key14: value22
          key24: value1
